--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /tmp
 
 # Ignore secrets
+config/initializers/devise.rb
 config/initializers/secret_token.rb
 config/secrets.yml
 config/database.yml
