Add tests for Alert.touch.

--- a/test/fixtures/alerts.yml
+++ b/test/fixtures/alerts.yml
@@ -1,15 +1,22 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  message: MyString
-  multiplicity: 1
-  alertable_id: 
-  alertable_type: Alertable
+# one:
+#   name: MyString
+#   message: MyString
+#   multiplicity: 1
+#   alertable_id: 
+#   alertable_type: Alertable
 
-two:
-  name: MyString
-  message: MyString
-  multiplicity: 1
-  alertable_id: 
-  alertable_type: Alertable
+# two:
+#   name: MyString
+#   message: MyString
+#   multiplicity: 1
+#   alertable_id: 
+#   alertable_type: Alertable
+
+# Model Tests
+
+alert_canonical:
+  name: Canonical Name
+  message: Alert Message
+  alertable: disk_canonical (Disk)
