Remove production and deployment settings from the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ config/database.yml
 
 # Ignore generated docs
 /doc
+
+# Ignore production and deployment settings
+Capfile
+.capistrano
+config/deploy
+config/deploy.rb
+
+config/environments/production.rb
